<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2">

    <Button
        android:id="@+id/button36"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_red"
        android:background="@color/red"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button31"
        android:layout_alignStart="@+id/button31" />

    <Button
        android:id="@+id/button35"
        android:background="@color/orange"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_orange"
        android:layout_above="@+id/button37"
        android:layout_toRightOf="@+id/button36"
        android:layout_toEndOf="@+id/button36" />

    <Button
        android:id="@+id/button37"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/txt_yellow"
        android:layout_above="@+id/button34"
        android:layout_toLeftOf="@+id/button34"
        android:layout_toStartOf="@+id/button34" />

    <Button
        android:id="@+id/button34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_green"
        android:background="@color/green"
        android:layout_above="@+id/button33"
        android:layout_toRightOf="@+id/button33"
        android:layout_toEndOf="@+id/button33" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/button33"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_blue"
        android:background="@color/blue"
        android:layout_above="@+id/button32"
        android:layout_toRightOf="@+id/button32"
        android:layout_toEndOf="@+id/button32" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/button32"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_indigo"
        android:layout_above="@+id/button31"
        android:background="@color/indigo"
        android:layout_toRightOf="@+id/button31"
        android:layout_toEndOf="@+id/button31" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/button31"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_viole"
        android:background="@color/viole"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="184dp" />
</RelativeLayout>