<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/black2">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_1" />

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_2" />

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_4" />

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_5" />

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_6" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_7" />

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_8" />

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_9" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:layout_margin="4dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"
            android:id="@+id/button27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:textAllCaps="false"
            android:text="Show column" />
    </TableRow>
</TableLayout>