<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lnhoz1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnhoz2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_below="@+id/lnhoz1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button4"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/button5"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/pause" />

        <Button
            android:id="@+id/button6"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/stop" />
    </LinearLayout>
</RelativeLayout>
