<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context="com.example.along.baitaptonghop1layout.MainActivity">

    <LinearLayout
        android:id="@+id/ln_hoz1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/bidv_logo"
            android:contentDescription="" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.99">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank"
                android:textColor="@color/grey"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/textView3"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginBottom="12dp"
                android:text="@string/address"
                android:textColor="@color/grey"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="54dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/space"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/ln_hoz1"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/ln_hoz2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ln_hoz1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/address"
            app:srcCompat="@mipmap/bidv_logo" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.81">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank"
                android:textColor="@color/grey"
                android:textSize="30sp"
                android:layout_marginTop="13dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="11dp"
                android:text="@string/address"
                android:textColor="@color/grey"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="54dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/space"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignBottom="@+id/ln_hoz2"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/ln_hoz3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ln_hoz2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/address"
            app:srcCompat="@mipmap/bidv_logo" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.81">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank"
                android:textColor="@color/grey"
                android:textSize="30sp"
                android:layout_marginTop="19dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="11dp"
                android:text="@string/address"
                android:textColor="@color/grey"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="54dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/space"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignBottom="@+id/ln_hoz3"
        android:background="@color/white" />

    <LinearLayout
        android:id="@+id/ln_hoz4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ln_hoz3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/address"
            app:srcCompat="@mipmap/bidv_logo" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.81">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_bank"
                android:textColor="@color/grey"
                android:textSize="30sp"
                android:layout_marginTop="19dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView10"
                android:layout_alignStart="@+id/textView10"
                android:layout_below="@+id/textView10"
                android:layout_marginTop="11dp"
                android:text="@string/address"
                android:textColor="@color/grey"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="54dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/space"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_alignBottom="@+id/ln_hoz4"
        android:background="@color/white" />


</RelativeLayout>
